Fix section heading padding, margin and alignment

--- a/public/stylesheets/layout/_sections.scss
+++ b/public/stylesheets/layout/_sections.scss
@@ -15,11 +15,11 @@
     padding: 0 0 20px 0;
   }
   &--btn {
-    padding: 20px 0 60px 0;
+    padding: 20px 0 50px 0;
   }
   &__heading {
     padding: 0 $heading-padding;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     @include font-style($xl, $bold);
     &--menu {
       position: relative;
@@ -39,19 +39,20 @@
         max-width: 70%;
       }
     }
-    &--card-responsive {
-      @include tablet-only {
-        max-width: 90%;
-      }
-    }
-    &--responsive-centered {
+    &--home {
       @include tablet-only {
         text-align: center;
+        margin-bottom: 50px;
       }
+    }
+    &--explore {
+      margin-bottom: 20px;
+      padding: 0 60px;
     }
   }
   &__p {
-    margin: 15px 0 20px 0;
+    margin: 20px 0;
+    padding: 0 10px;
     @include font-style($l, $thin);
   }
 }
