--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -26,12 +26,12 @@
   text-align: center;
   width: 320px;
   height: 75px;
-  margin: 10px auto;
+  margin: 0 auto;
   border-radius: 25px;
   background: $clr-bg-sec;
   @include blur-shadow(0px, 5px, 15px, $clr-bg-sec);
   @include laptop-only {
-    margin: 10px 30px;
+    margin: 0 30px;
   }
   &--alt {
     background: fade-out($clr-pri, 0.85);
